--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Daniel Danciu <daniel@cradle.bio>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 editdistance = "^0.6.0"
-torch = "^1.12.0"
+torch= "*"
 numpy = "^1.23.1"
 pandas = "^1.4.3"
 tqdm = "^4.64.0"
