--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,19 @@ description = ""
 authors = ["Daniel Danciu <daniel@cradle.bio>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
 editdistance = "^0.6.0"
-torch= "*"
+torch = "*"
 numpy = "^1.23.1"
 pandas = "^1.4.3"
 tqdm = "^4.64.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^7.4.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poe.tasks]
+format = [{ cmd = "ruff ." }, { cmd = "isort ." }]
