--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,13 @@ torch = "*"
 numpy = "^1.23.1"
 pandas = "^1.4.3"
 tqdm = "^4.64.0"
+matplotlib = "^3.8.2"
+seaborn = "^0.13.0"
+altair = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.3"
+ipykernel = "^6.27.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
