--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ altair = "^5.2.0"
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.3"
 ipykernel = "^6.27.1"
+poethepoet = "^0.24.4"
+ruff = "^0.1.7"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -25,3 +28,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
 format = [{ cmd = "ruff ." }, { cmd = "isort ." }]
+test = "pytest"
