--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tqdm = "^4.64.0"
 matplotlib = "^3.8.2"
 seaborn = "^0.13.0"
 altair = "^5.2.0"
+scipy = "^1.11.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.3"
