--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ matplotlib = "^3.8.2"
 seaborn = "^0.13.0"
 altair = "^5.2.0"
 scipy = "^1.11.4"
+tensorboardX = "^2.6.2"
+tensorboard = "^2.15.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.3"
